# menano

./: Install03  LICENSE  README.md  Shared Library Path Fix  boxinstall  build_deb_mesa.sh  build_turnip.sh  install  install02  install03  install04  install04.sh  output-metadata.json  setup.sh  start-droidbox  startx  termux-x11-1.02.07-0-all.deb  termux-x11-1.02.07-0-any.pkg.tar.xz  update  virglinstall  virglinstall01  virglinstall02.sh  wine  wine01  wine02  wine9_9  wsi-termux-x11-v4.patch  wsi_common_x11.c  x11  x33  코드
.github/workflows/: FEXCore.yml  Gamescope.yml  LSFG-VK-AFMF  ProtonLite_wine.yml  VkGHL.yml  Vortek.yml  VulkanMemory.yml  amd64_wine.yml  arm wine  arm64_termux_wine.yml  arm64_wine.yml  arm64ec_proton.yml  arm64ec_termux_wine.yml  arm64ec_wine  arm64ec_wine.yml  arm64ec_wine01  arm64ec_wine01.yml  arm64ec_wine02.yml  arm64ec_wine03.yml  arm_wine.yml  bcn_layer.yml  box64.yml  build_glibc.yml  displayx_layer.yml  libbcn_layer.yml  libudev.yml  lsfg-vk.yml  mesa.yml  mesa01.yml  path_mesa.yml  termux.yml  termux_glibc_GStreamer.yml  termux_wine.yml  vkBasalt.yml  vulkan-wsi-layer.yml  wine.yml  wine_termux.yml  wrapper_glibc.yml  wrapper_layer.yml  wrapper_layer_mail.yml
dll/: wdscore.spec  wineboot.c
dll/ntdll/: loader.c
dll/wow64/: syscall.c
framegen/public/: lsfg_3_1.hpp  lsfg_3_1p.hpp
framegen/v3.1_src/: lsfg.cpp
framegen/v3.1p_src/: lsfg.cpp
include/: context.hpp
include/mini/: image.hpp  semaphore.hpp
include/utils/: utils.hpp
loader/: wine.inf.in
lsfg-vk-layer/src/: instance.cpp  instance.hpp  (+1 more)
path/: 1.patch  10.patch  11.patch  12.patch  13.patch  14.patch  15.patch  16.patch  17.patch  2.patch  3.patch  4.patch  5.patch  6.patch  7.patch  8.patch  9.patch  CMakeLists.txt  LOCALE_ARCHIVE  android_sysvshm.c  bylaws.patch  device.cpp  displayx_layer.cpp  displayx_layer.hpp  esync.patch  ffmpeg_api_fix.patch  ffmpeg_fix.patch  fix_ffmpeg_api_compatibility.patch  fix_gstreamer_complete.sh  fix_return_value.patch  gstreamer-fix.patch  gstreamer.patch  gstreamer01.patch  image.cpp  kgsl.patch  looser.patch  protonoverrides.patch  semaphore.cpp  semaphore01.cpp  shm_utils.h  (+11 more)
server/: esync.c  esync.h  fsync.c  fsync.h  unicode.c
src/: context.cpp  context01.cpp
tests/: test_invariant_server.c
(+20 files in other folders)
